--- a/arch/arm64/configs/mt8173.config
+++ b/arch/arm64/configs/mt8173.config
@@ -49,3 +49,15 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
+
+CONFIG_CMA=y
+CONFIG_DMA_CMA=y
+CONFIG_CMA_SIZE_MBYTES=32
+CONFIG_I2C_SLAVE=y
+CONFIG_SPI_GPIO=y
+CONFIG_SPI_SPIDEV=y
+CONFIG_DRM_POWERVR_ROGUE=y
+CONFIG_DRM_POWERVR_ROGUE_DEBUG=y
+CONFIG_MFD_CROS_EC=y
+CONFIG_CLK_QORIQ=y
+CONFIG_COMMON_CLK_XGENE=y
