arm64: dts: ti: k3-am625-sk: enable the dss and gpu
Enable the dss and gpu nodes for k3-am625-sk devices.

Signed-off-by: Randolph Sapp <rs@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-am625-sk.dts
+++ b/arch/arm64/boot/dts/ti/k3-am625-sk.dts
@@ -491,3 +491,11 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&main_usb1_pins_default>;
 };
+
+&gpu {
+	status = "okay";
+};
+
+&dss {
+	status = "okay";
+};
